Changelog
=========

5.3.dev0 - (unreleased)
-----------------------

5.2 - (2015-07-28)
------------------
* Fix: getRequestHead now is calleble via ajax
  [lucas refs #27218]

5.1 - (2015-07-09)
------------------
* Bug fix: adjust responsive template
  [lucas refs #27270]

5.0 - (2015-03-17)
------------------
* Change: Switched to curl in the jenkins build install script
  [olimpiurob refs #22402]
* Change: Changed fetch url for jenkins build install script to the install 
  script from the main EEA CPB repository
  [olimpiurob refs #22402]

4.9 - (2013-11-20)
------------------
* Bug fix: patch for losing css/js registry on submit after ac cookie expired
  [simiamih refs #17259]
* Change: more clean up after kss removal
  [simiamih refs #17259]

4.8 - (2013-05-24)
------------------
* Change: removed site related logic from getHeader since it was deprecated
  logic
  [ichimdav #14567]
* Bug fix: return only resources through getRequiredHead avoiding extra unneeded
  tags and metadata
  [ichimdav #14567]

4.7 - (2013-04-17)
------------------
* Bug fix: remove login tab from getHeader call
  [szabozo0 refs #14002]
* Bug fix: remove title tag, generator and viewport meta tags from getRequiredHead call
  [szabozo0 refs #14002]

4.6 - (2012-08-27)
------------------
* Bug fix: remove login via lxml introduced by design feature #5443 refs #5446.
  [demarant closes #5443]

4.5 - (2012-07-16)
------------------
* Bug fix: Quickfix for empty html tags
  [szabozo0 refs #5358]

4.4 - (2012-07-09)
------------------
* Bug fix: fixed not closed tags on external templates
  [szabozo0 refs #5095]
* Bug fix: fixed markup of HISTORY.txt file
  [ciobabog refs #5231]

4.3 - (2012-05-15)
------------------
* Upgrade step:
  - Publish /code/templates/template-service-api-v2
  - Set /code/templates/template-services page as default view for /code/templates

4.2 - (2012-05-09)
------------------
* Feature: updated external templates for new headers and footers
  [szabozo0 #5095]