@@ -3,7 +3,9 @@ Changelog
 
 5.3.dev0 - (unreleased)
 -----------------------
-
+* Bugfix: set socket timeout to prevent Zope instances hanging out when the external service is not responding
+  [lucas refs #29063]
+  
 5.2 - (2015-07-28)
 ------------------
 * Fix: getRequestHead now is calleble via ajax
